--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+:root {
+  --font-poppins: 'Poppins', sans-serif;
+}
+
+.font-poppins {
+  font-family: var(--font-poppins);
+}
